# scrive

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/scrive-core/: Cargo.toml  README.md
crates/scrive-core/benches/: LEDGER.md  perf.rs  support.rs
crates/scrive-core/examples/: transcript.rs
crates/scrive-core/src/: autoclose.rs  bracket.rs  bracket_tree.rs  buffer.rs  coords.rs  decorations.rs  display_map.rs  document.rs  find.rs  fold_map.rs  highlight.rs  history.rs  intel.rs  lib.rs  movement.rs  offset_set.rs  patch.rs  perf.rs  perf_gate.rs  rope.rs  row_layout.rs  selection.rs  sum_tree.rs  transaction.rs  verbs.rs
crates/scrive-core/src/intel/: completion.rs  hover.rs  providers.rs  signature.rs  snippet.rs
crates/scrive-core/tests/: spike_syntect.rs  transcript.rs
crates/scrive-iced/: Cargo.toml  README.md
crates/scrive-iced/assets/: CODICON-LICENSE.md  scrive-dark.tmTheme
crates/scrive-iced/examples/: minimal.rs  record_showcase.rs  scratch.rs
crates/scrive-iced/examples/assets/: rust.sublime-syntax
crates/scrive-iced/examples/shared/: capture.rs
crates/scrive-iced/src/: clipboard.rs  code_editor.rs  editor.rs  geo.rs  highlight_pool.rs  lib.rs  metrics.rs  popup.rs
