[package]
name = "scrive-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Headless code-editor core: buffer, atomic multi-range transactions, undo/redo, selections, tracked-range decorations, and an incremental syntect highlight cache. Imports no GUI crate."
keywords = ["editor", "text", "buffer", "undo", "headless"]
categories = ["text-editors", "data-structures"]
# benches/support.rs is a shared module of the one `perf` bench, not a bench
# of its own — explicit [[bench] ] only.
autobenches = false

# HARD STRUCTURAL RULE: scrive-core depends on no GUI crate. If `iced`/`winit`/
# `wgpu` ever appears in this crate's dependency tree, the design has leaked. CI
# runs `cargo tree -p scrive-core` and asserts none appear.
#
# Dependency budget — each entry earns its place with a consumer:
#   syntect   — the incremental highlight state cache. Types stay OUT of the
#               public API (wrapped).
#   memchr    — line-index and substring scanning.
#   thiserror — transaction/load error enums.
#   regex     — find's whole-word and regex modes. Types stay OUT of the public
#               API (wrapped), like syntect's. Deliberately `regex` and NOT the
#               `fancy-regex` syntect already pulls in: a find pattern arrives
#               keystroke-by-keystroke from a user, and fancy-regex BACKTRACKS,
#               so one pathological pattern would hang the UI. regex's RE2
#               automaton is linear-time by construction. It is also nearly free
#               here — regex-automata / regex-syntax / aho-corasick / memchr are
#               already in the tree via syntect's `default-fancy`.
[dependencies]
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
memchr = "2"      # find scanning (memmem/memchr2) + test oracles
thiserror = "2"   # error enums (LoadError, TransactionError)
regex = "1"       # find's whole-word + regex modes (wrapped; never public)

[dev-dependencies]
# criterion: the wall-clock bench harness (op-count canaries live in unit tests;
# wall-clock lives here). Dev-only — never enters the lib graph, so the
# cargo-tree GUI gate is unaffected.
criterion = "0.5"
# ropey: kept ONLY as the byte-for-byte oracle for our own rope. Dev-only — the
# production build does not depend on it.
ropey = { version = "1.6", default-features = false, features = ["simd"] }

[[bench]]
name = "perf"
harness = false

[package.metadata.docs.rs]
all-features = true
